# filesearcher-deamon-v5

./: Cargo.toml  README.md  file_searcher_deamon_v5.sqlite
dev/: build.md  errors.txt  file_searcher_deamon_v5.sqlite  ideas.md  launch.cmd  vibe.md
src/: config.rs  main.rs
src/sqlstatements/: mod.rs  sql_initialise.rs
tests/: config.toml
