[package]
name = "file_searcher_deamon_v5"
version = "0.1.0"
edition = "2024"

[dependencies]
async-walkdir = "2.1.0"
chrono = "0.4.42"
crc-fast = "1.8.0"
dirs = "6.0.0"
extract_text = { git = "https://github.com/rayzinnz/rust-extract-text.git" }
futures-lite = "2.6.1"
helper_lib = { git = "https://github.com/rayzinnz/rust-helper-lib.git" }
log = "0.4.28"
regex = "1.12.2"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
simplelog = "0.12.2"
time = "0.3.44"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
toml-datetime-compat = { version = "0.3", features = ["chrono"] }
