[package]
name = "file_searcher_deamon_v5"
version = "0.1.2"
edition = "2024"

[dependencies]
async-walkdir = "2.0"
chrono = "0.x"
colored = "3.0"
crc-fast = "1.0"
dirs = "6.0"
extract_text = { git = "https://github.com/rayzinnz/rust-extract-text.git" }
futures-lite = "2.0"
helper_lib = { git = "https://github.com/rayzinnz/rust-helper-lib.git" }
log = "0.x"
regex = "1.0"
rusqlite = { version = "0.x", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
simplelog = "0.x"
time = "0.x"
tokio = { version = "1.0", features = ["full"] }
toml = "1.0"
toml-datetime-compat = { version = "0.x", features = ["chrono"] }
